# event-driven-microservices

./: README.md  docker-compose.yml
inventory-service/: .air.toml  .dockerignore  .env  Dockerfile  go.mod  go.sum  (+3 more)
management-service/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  docker-compose.local.yml  docker-compose.yaml
management-service/src/: main.rs
management-service/src/application/: mod.rs
management-service/src/application/interfaces/: i_message_broker_consumer.rs  i_message_broker_consumer_service.rs  i_message_broker_service.rs  i_rest_service.rs  mod.rs
management-service/src/application/subcommand/: add_inventory_subcommand.rs  create_order_subcommand.rs  get_order_status_subcommand.rs  login_subcommand.rs  mod.rs  oversee_subcommand.rs  signup_subcommand.rs  subcommand_helper.rs  update_inventory_subcommand.rs
management-service/src/application/usecase/: add_inventory_usecase.rs  create_order_usecase.rs  get_order_status_usecase.rs  login_usecase.rs  mod.rs  signup_usecase.rs  update_inventory_usecase.rs
management-service/src/application/usecase/usecase_test/: auth_usecase_test.rs  inventory_usecase_test.rs  mod.rs  order_usecase_test.rs
management-service/src/domain/cli/: cli_commands.rs  mod.rs
management-service/src/infra/message_broker/: kafka_config.rs  kafka_consumer.rs
management-service/src/infra/service/: message_broker_consumer_service.rs  message_broker_service.rs  mod.rs  rest_service.rs
management-service/src/infra/service/service_test/: message_broker_service_test.rs  mod.rs  rest_service_test.rs
(+186 files in other folders)
